--- a/asincronismo/package.json
+++ b/asincronismo/package.json
@@ -7,6 +7,8 @@
     "start": "node src/index.js",
     "callback": "node src/callbacks/index.js",
     "callback:challenge": "node src/callbacks/challenge.js",
+    "promise": "node src/promise/index.js",
+    "promise:challenge": "node src/promise/challenge.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
